[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/tmp_text/wall.png" type="Texture" id=1]
[ext_resource path="res://Locations/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Creatures_tscn/Barmen/BarmenPrototipeV1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Creatures_tscn/MainCharacter/MainCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Creatures_tscn/MCFriends/MCFriend1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Creatures_tscn/MCFriends/MCFriend2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Creatures_tscn/Citizen/Citizen1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Creatures_tscn/Citizen/Citizen2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Locations/Tavern_Room.gd" type="Script" id=9]
[ext_resource path="res://aux_gds/dialogue_player/DialoguePlayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Environment_tscn/Platforms/Platform_1_rock.tscn" type="PackedScene" id=11]

[node name="Level_Tavern" type="Node2D"]
script = ExtResource( 9 )

[node name="Wall" type="Sprite" parent="."]
position = Vector2( -188.901, 1 )
scale = Vector2( 1.12171, 1 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1552, 848 )

[node name="Floor" parent="." instance=ExtResource( 2 )]

[node name="NPC" type="YSort" parent="."]

[node name="MCFriend1" parent="NPC" instance=ExtResource( 5 )]
position = Vector2( 327.851, 444.558 )

[node name="MCFriend2" parent="NPC" instance=ExtResource( 6 )]
position = Vector2( 436.347, 442.183 )

[node name="Citizen1" parent="NPC" instance=ExtResource( 7 )]
position = Vector2( 658.033, 448.357 )

[node name="Citizen2" parent="NPC" instance=ExtResource( 8 )]
position = Vector2( 717.524, 450.041 )

[node name="Barmen" parent="NPC" instance=ExtResource( 3 )]
position = Vector2( 205.642, 444.69 )

[node name="MainCharacter" parent="." instance=ExtResource( 4 )]
position = Vector2( 386.798, 444.847 )

[node name="DialoguePlayer" parent="." instance=ExtResource( 10 )]
dialogue_file = "res://aux_gds/dialogue_data/npc.json"

[node name="Timer" type="Timer" parent="."]

[node name="Platform_1_rock" parent="." instance=ExtResource( 11 )]
position = Vector2( 502.747, 462.216 )

[node name="Platform_1_rock2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1632.41, 485.379 )

[node name="Platform_1_rock3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1733.97, 442.616 )

[node name="Platform_1_rock4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1860.48, 517.452 )

[node name="Platform_1_rock5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1951.35, 476.47 )

[node name="Platform_1_rock6" parent="." instance=ExtResource( 11 )]
position = Vector2( 2035.09, 424.798 )

[node name="Platform_1_rock8" parent="." instance=ExtResource( 11 )]
position = Vector2( 2120.62, 376.69 )

[node name="Platform_1_rock9" parent="." instance=ExtResource( 11 )]
position = Vector2( 2051.13, 323.236 )

[node name="Platform_1_rock10" parent="." instance=ExtResource( 11 )]
position = Vector2( 1817.71, 357.09 )

[node name="Platform_1_rock11" parent="." instance=ExtResource( 11 )]
position = Vector2( 2241.78, 415.889 )

[node name="Platform_1_rock7" parent="." instance=ExtResource( 11 )]
position = Vector2( 1926.4, 365.999 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
